[gd_scene load_steps=8 format=2]

[ext_resource path="res://towers/EmberTower.gd" type="Script" id=1]
[ext_resource path="res://materials/spriteOverride.tres" type="Material" id=2]
[ext_resource path="res://sprites/fire_elemental.png" type="Texture" id=3]
[ext_resource path="res://sprites/ember-thumbnail.png" type="Texture" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 4, 4, 4 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 4, 4, 4 )

[sub_resource type="Animation" id=3]
resource_name = "emberAnim"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0.855507, 2, 9.14449, 15 ), Rect2( 15, 2, 11, 15 ), Rect2( 29, 0, 11, 17 ), Rect2( 15, 2, 11, 15 ) ]
}

[node name="EmberTower" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )
script = ExtResource( 1 )
towerName = "Ember"
power = 1.5
cost = 10
costMod = 3.0
description = "Passive unit that increases the strength of ally projectiles that pass through them by 50%"

[node name="AttackTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.75
one_shot = true

[node name="AttackRange" type="Area" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="AttackRange"]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 72, 0, 0, 0, 72, 0, 0, 0, 1, 0, 0, 0 )
material_override = ExtResource( 2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0.855507, 2, 9.14449, 15 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "emberAnim"
playback_speed = 2.25
anims/emberAnim = SubResource( 3 )

[node name="Thumbnail" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="area_entered" from="AttackRange" to="." method="_on_AttackRange_area_entered"]
[connection signal="area_exited" from="AttackRange" to="." method="_on_AttackRange_area_exited"]
